# CMPT417-Final-Project-F22

./: .gitignore  CMakeLists.txt  README.md  TDHProject.pro  heuristics.cpp  heuristics.h  instances.cpp  instances.h  main.cpp  mainwindowcontrols.cpp  mainwindowcontrols.h  mainwindowcontrols.ui  mapwidget.h  simulation.cpp  simulation.h  solvers.cpp  solvers.h
instances/: Quick_command.txt  default_command.txt
instances/Testing/: all_command.txt  den312_commands.txt  den520_commands.txt  empty4848_command.txt  ht_chantry_command.txt  lak303d_command.txt
